--- a/WeatherApp.xcodeproj/xcshareddata/xcschemes/WeatherApp.xcscheme
+++ b/WeatherApp.xcodeproj/xcshareddata/xcschemes/WeatherApp.xcscheme
@@ -57,6 +57,10 @@
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
+      <LocationScenarioReference
+         identifier = "Moscow, Russia"
+         referenceType = "1">
+      </LocationScenarioReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
